Text shift fix

--- a/react/Button/Button.less
+++ b/react/Button/Button.less
@@ -92,6 +92,7 @@
 .root_isTransparent {
   background-color: transparent;
   box-shadow: none;
+  line-height: 0;
 }
 
 .root_isGhost {
